--- a/web/src/main/resources/templates/search/brand/brands.html
+++ b/web/src/main/resources/templates/search/brand/brands.html
@@ -26,6 +26,7 @@
 	<div id="includeHeader" class="header" th:include="head/head">Head</div>
 	<!-- header -->
 		<div class="wrapper h400">
+			<div th:include="productcategory/secondCategories">Head</div>
 			<div class="filter">
 				<span>查找结果共<i th:text="${page.totalElements}">1222</i>个品牌</span>
 			</div>
