--- a/web/src/main/resources/templates/search/info/info.html
+++ b/web/src/main/resources/templates/search/info/info.html
@@ -15,6 +15,7 @@
 		</div>
 		<!-- header -->
 		<div class="wrapper">
+			<div th:include="productcategory/secondCategories">Head</div>
 			<div class="mainwrapper clearfix">
 				<div class="mainpanel fr">
 					<div class="news-wrap">
