--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -111,6 +111,7 @@
 		</div>
 		<!-- header -->
 		<div class="wrapper">
+			<div th:include="productcategory/secondCategories">Head</div>
 			<div class="gray-hd">
 				<span>筛选商品 共<i th:text="${products.totalElements}">1222</i>件商品</span>
 			</div>
