--- a/web/src/main/resources/templates/search/subject/subjects.html
+++ b/web/src/main/resources/templates/search/subject/subjects.html
@@ -45,6 +45,7 @@
 		</div>
 		<!-- header -->
 		<div class="wrapper">
+			<div th:include="productcategory/secondCategories">Head</div>
 			<div class="sort-group">
 				<div class="selected">
 					<label><b>筛选：</b></label>
