--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" th:href="@{/css/global.css}" />
 		<script th:src="@{/js/jquery-1.11.2.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+		<script type="text/javascript" th:src="@{/js/searchForm.js}"></script>
 		<script th:src="@{/js/script.js}"></script>
 		<script type="text/javascript">
             $(function() {
@@ -22,158 +23,7 @@
 		</script>
 	</head>
 	<body>
-    <div class="top-line-wp">
-        <div class="w990">
-            <a href="/login">登录</a>
-            <span>|</span>
-            <a href="/signup?user">注册</a>
-        </div>
-    </div>
-    <div class="header">
-        <div class="head-box clearfix">
-            <a href="/" class="logo">
-                <img th:src="@{/img/logo.png}" alt="logo" width="135"/>
-                <span class="logo-hd">
-                    <img th:src="@{/img/logo-txt.png}"/>
-                </span>
-            </a>
-            <div class="search-wp">
-                <div class="search-tab">
-                    <a class="active">商品</a>
-                    <a>型号</a>
-                    <a>品牌</a>
-                    <a>专题</a>
-                    <a>资讯</a>
-                </div>
-                <div class="search-panel">
-                    <form>
-                        <div class="search-cont">
-                            <input type="text" />
-                            <button type="submit" class="search-btn">搜索</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="head-cart">
-                <div class="cart-num">5</div>
-                <div class="ct-cart">我的购物车</div>
-                <div class="ct-cart-wrap bodr hide" style="display: none;">
-                    <h3><b class="gray-deeply">最近加入的商品</b></h3>
-                    <div class="ct-cart-list">
-                        <ul>
-                            <li>
-                                <div class="fl ct-img">
-                                    <a><img src="img/list1.jpg" width="50" height="50"/></a>
-                                </div>
-                                <div class="fl ct-name">
-                                    <a>友臣 肉松饼898克 热销装</a>
-                                </div>
-                                <div class="fr ct-detail">
-                                    <span class="ct-price">
-                                            <b>150.00</b>×1
-                                        </span>
-                                    <br/>
-                                    <a class="fr">删除</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fl ct-img">
-                                    <a><img src="img/list1.jpg" width="50" height="50"/></a>
-                                </div>
-                                <div class="fl ct-name">
-                                    <a>友臣网络热销装网络热销装</a>
-                                </div>
-                                <div class="fr ct-detail">
-                                    <span class="ct-price">
-                                            <b>150.00</b>×1
-                                        </span>
-                                    <br/>
-                                    <a class="fr">删除</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fl ct-img">
-                                    <a><img src="img/list1.jpg" width="50" height="50"/></a>
-                                </div>
-                                <div class="fl ct-name">
-                                    <a>友臣 肉松饼898克 网络热销装</a>
-                                </div>
-                                <div class="fr ct-detail">
-                                    <span class="ct-price">
-                                            <b>150.00</b>×1
-                                        </span>
-                                    <br/>
-                                    <a class="fr">删除</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fl ct-img">
-                                    <a><img src="img/list1.jpg" width="50" height="50"/></a>
-                                </div>
-                                <div class="fl ct-name">
-                                    <a>肉松饼898克 网络热销装网络热销装网络热销装网络热销装</a>
-                                </div>
-                                <div class="fr ct-detail">
-                                    <span class="ct-price">
-                                            <b>150.00</b>×1
-                                        </span>
-                                    <br/>
-                                    <a class="fr">删除</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fl ct-img">
-                                    <a><img src="img/list1.jpg" width="50" height="50"/></a>
-                                </div>
-                                <div class="fl ct-name">
-                                    <a>友臣 肉松饼898克 </a>
-                                </div>
-                                <div class="fr ct-detail">
-                                    <span class="ct-price">
-                                            <b>150.00</b>×1
-                                        </span>
-                                    <br/>
-                                    <a class="fr">删除</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="fl ct-img">
-                                    <a><img src="img/list1.jpg" width="50" height="50"/></a>
-                                </div>
-                                <div class="fl ct-name">
-                                    <a>友臣 肉松饼898克装网络热销装</a>
-                                </div>
-                                <div class="fr ct-detail">
-                                    <span class="ct-price">
-                                            <b>150.00</b>×1
-                                        </span>
-                                    <br/>
-                                    <a class="fr">删除</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="ct-total">
-                        共<b>21</b>件商品　共计<strong>￥ 1961.95</strong>
-                        <a class="go-cart">去购物车</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="head-nav">
-            <div class="nav-box">
-                <ul>
-                    <li class="active"><a href="/">首页</a></li>
-                    <li><a href="/productCategories/1">仪器</a></li>
-                    <li><a href="/productCategories/2">试剂</a></li>
-                    <li><a href="/productCategories/3">耗材</a></li>
-                    <li><a href="/productCategories/4">服务</a></li>
-                    <li><a href="/subjects">专题</a></li>
-                    <li><a href="#">资讯</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
+	<div th:include="head/head"></div>
     <!-- header -->
     <div class="wrapper index-wrap">
         <div class="screen-one clearfix">
