--- a/web/src/main/resources/templates/search/model/products.html
+++ b/web/src/main/resources/templates/search/model/products.html
@@ -77,6 +77,7 @@
 	<div id="includeHeader" class="header" th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">
+		<div th:include="productcategory/secondCategories">Head</div>
 		<div class="filter">
 			<span>查找结果共<i th:text="${page.totalElements}">1222</i>件商品</span>
 		</div>
