修改前端样式

--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -252,7 +252,7 @@
         </div>
     </div>
     <div class="footer">
-        © 1998 - 2015 SJ Inc. All Rights Reserved
+        <div th:include="footer/footer"></div>
     </div>
 </body>
 </html>
