--- a/web/src/main/resources/templates/user/common/changePassword.html
+++ b/web/src/main/resources/templates/user/common/changePassword.html
@@ -24,6 +24,7 @@
 <body>
 	<div class="header" th:include="head/head">Head</div>
 	<div class="wrapper">
+		<div th:include="productcategory/secondCategories">Head</div>
 		<div class="self-wrap">
 			<div class="gray-hd">
 				<a class="blue">个人中心</a>
