--- a/web/src/main/resources/templates/user/common/collection.html
+++ b/web/src/main/resources/templates/user/common/collection.html
@@ -63,6 +63,7 @@
 		<div class="header" th:include="head/head">Head</div>
 		<!-- header -->
 		<div class="wrapper">
+			<div th:include="productcategory/secondCategories">Head</div>
 			<div class="self-wrap">
 				<div class="gray-hd">
 					<a class="blue">个人中心</a>
