--- a/web/src/main/resources/templates/user/update-result.html
+++ b/web/src/main/resources/templates/user/update-result.html
@@ -40,10 +40,10 @@
 	<!-- header -->
 	<div class="wrapper">
 		<div class="hd resg-hd">
-			<span>采购清单生成完毕</span>
+			<span>修改资料</span>
 		</div>
 		<div class="mb150">				
-			<h1 class="pw-point">生成完毕，5秒后返回该清单详情，<a th:href="@{${href}}">立即返回</a></h1>
+			<h1 class="pw-point">修改成功！5秒后返回个人中心，<a th:href="@{${href}}">立即返回</a></h1>
 		</div>
 	</div>
 	<div th:include="footer/footer"></div>
