--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -1,39 +1,40 @@
 <div class="top-line-wp">
 <script type="text/javascript" th:src="@{/js/logout.js}"></script>
+<script type="text/javascript" th:src="@{/js/script.js}"></script>
    <div class="w990" th:if="${session.SPRING_SECURITY_CONTEXT==null}">
             <a href="/login">登录</a>
             <span>|</span>
-            <a href="/siguup?user">注册</a>
+            <a href="/signup?user">注册</a>
     </div>
     <div th:unless="${session.SPRING_SECURITY_CONTEXT==null}">
 	    <div class="w990" th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_COMMONUSER">
-	    	<i th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></i> |
-	    	<a href="/user/detail">个人中心</a> |
-	    	<a href="/user/collection">收藏夹</a> |
-	    	<a href="/user/carts">我的购物车</a> |
-	    	<a href="/user/buyRecords">我的采购清单</a> | 
-	    	<form id="logoutForm" action="/logout" method="post" style="float: right;padding-left: 4px;">
+	    	<a href="/user/detail" th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></a><span>|</span>
+	    	<a href="/user/detail">个人中心</a><span>|</span>
+	    	<a href="/user/collection">收藏夹</a><span>|</span>
+	    	<a href="/user/carts">我的购物车</a><span>|</span>
+	    	<a href="/user/buyRecords">我的采购清单</a><span>|</span>
+	    	<form id="logoutForm" action="/logout" method="post" style="float: right;padding-top: 3px;">
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-				<a id="logout"> 退出登录</a>
+				<a id="logout">退出登录</a>
 			</form>
 	    </div>
 	    <div class="w990" th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_PROVIDER">
-	    	<i th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></i> |
-	    	<a href="/provider/detail">个人中心</a> |
-	    	<a target="_blank" href="/provider/products?form">商品发布</a> |
-	    	<a target="_blank" href="/provider/products">商品维护</a> |
-	    	<a href="/provider/count">商品信息统计</a> | 
-	    	<form id="logoutForm" action="/logout" method="post" style="float: right;padding-left: 4px;">
+	    	<a href="/provider/detail" th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></a><span>|</span>
+	    	<a href="/provider/detail">个人中心</a><span>|</span>
+	    	<a target="_blank" href="/provider/products?form">商品发布</a><span>|</span>
+	    	<a target="_blank" href="/provider/products">商品维护</a><span>|</span>
+	    	<a href="/provider/count">商品信息统计</a><span>|</span>
+	    	<form id="logoutForm" action="/logout" method="post" style="float: right;padding-top: 3px;">
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-				<a id="logout"> 退出登录</a>
+				<a id="logout">退出登录</a>
 			</form>
 	    </div>
 	    <div class="w990" th:if="${session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority}==ROLE_UNAUTH">
-	    	<i th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></i> |
-	    	<a href="/supplier/detail">个人中心</a> | 
-	    	<form id="logoutForm" action="/logout" method="post" style="float: right;padding-left: 4px;">
+	    	<a href="/supplier/detail" th:text="${session.SPRING_SECURITY_CONTEXT.authentication.principal.username}"></a><span>|</span>
+	    	<a href="/supplier/detail">个人中心</a><span>|</span>
+	    	<form id="logoutForm" action="/logout" method="post" style="float: right;padding-top: 3px;">
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-				<a id="logout"> 退出登录</a>
+				<a id="logout">退出登录</a>
 			</form>
 	    </div>
     </div>
@@ -64,7 +65,7 @@
                 </div>
                 </form>
             </div>
-            <div class="head-cart" th:if="${session.SPRING_SECURITY_CONTEXT==null || session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority==ROLE_PROVIDER}">
+            <div class="head-cart" th:if="${session.SPRING_SECURITY_CONTEXT==null || session.SPRING_SECURITY_CONTEXT.authentication.principal.siteAuthority=='ROLE_COMMONUSER'}">
             	<script type="text/javascript" th:src="@{/js/headCart.js}"></script>
                 <div class="cart-num" th:text="${session.cartLines==null?0:session.cartLines.size()}">5</div>
                 <a href="/user/carts"><div class="ct-cart">我的购物车</div></a>
