--- a/web/src/main/resources/templates/product/products.html
+++ b/web/src/main/resources/templates/product/products.html
@@ -57,12 +57,12 @@
 		</script>
 	</head>
 	<body>
-
-			<div id="includeHeader" th:include="head/head :: head">
+		<div id="includeHeader" th:include="head/head :: head">
 				Head
 			</div>
 		<!-- header -->
 		<div class="wrapper">
+			<div th:include="productcategory/secondCategories">Head</div>
 			<div class="crumb">
 				<a href="/index">首页</a>
 				<i>></i>
