--- a/web/src/main/resources/templates/user/common/cart.html
+++ b/web/src/main/resources/templates/user/common/cart.html
@@ -54,9 +54,10 @@
   </script>
 </head>
 <body>
-	<div class="header" th:include="head/headCart">Head</div>
+	<div class="header" th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper h400">
+		<div th:include="productcategory/secondCategories">Head</div>
 		<div class="self-wrap">
 			<div class="gray-hd"><a class="blue">个人中心</a></div>
 			<div class="mainwrapper clearfix">
