弹出框添加关闭按钮

--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -34,13 +34,10 @@
                         <li>
                             <label class="icon-yq">仪器</label>
                             <p>
-                                <a>影像系统</a>
-                                <a>生物芯片</a>
-                                <a>影像系统</a>
-                                <a>生物</a>
-                                <a>影像系统</a>
-                                <a>生物芯片</a>
-                                <a>生物芯片</a>
+                                <a href="/products/_search?secondCategory=220">实验室常用设备</a>
+                                <a href="/products/_search?secondCategory=195">天平</a>
+                                <a href="/products/_search?secondCategory=60">分子生物实验仪器</a>
+                                <a href="/products/_search?secondCategory=90">色谱系统</a>
                             </p>
                             <div class="category-child-list">
                             	<a th:each="productCategory:${yqs}" 
@@ -51,13 +48,10 @@
                         <li>
                             <label class="icon-sj">试剂</label>
                             <p>
-                                <a>影像系统</a>
-                                <a>生物芯片</a>
-                                <a>影像系统</a>
-                                <a>生物</a>
-                                <a>影像系统</a>
-                                <a>生物芯片</a>
-                                <a>生物芯片</a>
+                                <a href="/products/_search?secondCategory=344">生物化学</a>
+                                <a href="/products/_search?secondCategory=369">常用生化试剂</a>
+                                <a href="/products/_search?secondCategory=387">酶</a>
+                                <a href="/products/_search?secondCategory=432">PCR/RT-PCR</a>
                             </p>
                             <div class="category-child-list">
                             	<a th:each="productCategory:${sjs}" 
@@ -68,13 +62,12 @@
                         <li>
                             <label class="icon-hc">耗材</label>
                             <p>
-                                <a>影像系统</a>
-                                <a>生物芯片</a>
-                                <a>影像系统</a>
-                                <a>生物</a>
-                                <a>影像系统</a>
-                                <a>生物芯片</a>
-                                <a>生物芯片</a>
+                                <a href="/products/_search?secondCategory=753">常用耗材</a>
+                                <a href="/products/_search?secondCategory=769">移液器</a>
+                                <a href="/products/_search?secondCategory=777">吸头</a>
+                                <a href="/products/_search?secondCategory=785">瓶</a>
+                                <a href="/products/_search?secondCategory=821">PCR耗材</a>
+                                <a href="/products/_search?secondCategory=807">管</a>
                             </p>
                             <div class="category-child-list">
                             	<a th:each="productCategory:${hcs}" 
@@ -85,13 +78,9 @@
                         <li>
                             <label class="icon-fw">服务</label>
                             <p>
-                                <a>影像系统</a>
-                                <a>生物芯片</a>
-                                <a>影像系统</a>
-                                <a>生物</a>
-                                <a>影像系统</a>
-                                <a>生物芯片</a>
-                                <a>生物芯片</a>
+                                <a href="/products/_search?secondCategory=932">仪器维修服务</a>
+                                <a href="/products/_search?secondCategory=934">技术培训服务</a>
+                                <a href="/products/_search?secondCategory=940">其它服务</a>
                             </p>
                             <div class="category-child-list">
                             	<a th:each="productCategory:${fws}" 
