--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -575,6 +575,7 @@ img {
     background: #fff;
     border: 1px solid #6dbaf8;
     border-top: none;
+    z-index:999;
 }
 
 .category-list li {
@@ -1096,7 +1097,7 @@ img {
     margin-top: 20px;
     margin-bottom: 40px;
     text-align: center;
-    background: #42a5f6;
+    background: #0b5a9f;
 }
 
 .resg-header .head-menu-btn.logo-menu {
@@ -1529,6 +1530,7 @@ a.plus:hover {
     position: relative;
     border-bottom: 1px solid #dcdcdc;
     overflow: hidden;
+    z-index:-1;
 }
 
 .search-select>label {
@@ -1611,6 +1613,7 @@ a.plus:hover {
 
 .filter.sorts-row {
     padding: 5px 20px;
+    z-index:-1;
 }
 
 .sort-radio {
@@ -3213,6 +3216,18 @@ select.w100 {
 .gif img {
     width: 50px;
     height: 50px;
+}
+
+.ajaxLogin-close{
+	position:absolute;
+	right:5px;
+	top:5px;
+	width: 20px;
+	height: 20px;
+}
+
+.ajaxLogin-close img{
+	cursor: pointer;
 }
 
 @-moz-document url-prefix() {
