--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -22,6 +22,11 @@
                 $(document).ajaxSend(function(e, xhr, options) {
                     xhr.setRequestHeader(header, token);
                 });
+        		$(".hide-wrap").on("click",".ajaxLogin-close",function(){
+        			$('.fixed').fadeOut();
+        			$('.hide-wrap').fadeOut();
+        			$('.hide-wrap').empty();
+        		});
                 $('.addCart').loginBeforeAjaxCart({
                     url : '/ajax/carts',
                     data : {
