--- a/web/src/main/resources/templates/user/common/signup.html
+++ b/web/src/main/resources/templates/user/common/signup.html
@@ -81,13 +81,13 @@
 			<div class="nav-box">
 				<a href="/">首页</a>
 				<i>|</i>
-				<a href="/productCategory/1">仪器</a>
+				<a href="/productCategories/1">仪器</a>
 				<i>|</i>
-				<a href="/productCategory/2">试剂</a>
+				<a href="/productCategories/2">试剂</a>
 				<i>|</i>
-				<a href="/productCategory/3">耗材</a>
+				<a href="/productCategories/3">耗材</a>
 				<i>|</i>
-				<a href="/productCategory/4">服务</a>
+				<a href="/productCategories/4">服务</a>
 				<i>|</i>
 				<a href="/subjects">解决方案</a>
 			</div>
@@ -97,20 +97,18 @@
 				<img th:src="@{/img/logo.png}" alt="logo" width="165" height="30"/>
 				<span class="logo-hd"><img th:src="@{/img/logo-txt.png}" /></span>
 			</a>
-			<div class="head-menu-btn resg-self">
-				<a class="self-btn"></a>
-				<a href="/signup?provider" class="company-btn"></a>
-			</div>
-			<div class="head-menu">
-				<a href="/login">已有账号？马上登录</a>
-			</div>
+			<div class="head-menu-btn fr login-resg">
+                <a href="/signup?provider" class="blue ft14">供应商注册</a>
+                <span class="ft14">|</span>
+                <a href="/login" class="blue ft14">已有账号？马上登录</a>
+            </div>
 		</div>
 	</div>
 	<!-- header -->
 	<div class="wrapper">
 		<form class="resg-form" enctype="multipart/form-data" th:object="${user}" th:method="post">
 			<div class="hd resg-hd">
-				<span>注册信息</span>
+				<span>基本信息</span>
 			</div>
 			<div class="form-group">
 				<label><i>*</i>用户名</label>
