--- a/web/src/main/resources/templates/user/login.html
+++ b/web/src/main/resources/templates/user/login.html
@@ -26,13 +26,13 @@
 			<div class="nav-box">
 				<a href="/">首页</a>
 				<i>|</i>
-				<a href="/productCategory/1">仪器</a>
+				<a href="/productCategories/1">仪器</a>
 				<i>|</i>
-				<a href="/productCategory/2">试剂</a>
+				<a href="/productCategories/2">试剂</a>
 				<i>|</i>
-				<a href="/productCategory/3">耗材</a>
+				<a href="/productCategories/3">耗材</a>
 				<i>|</i>
-				<a href="/productCategory/4">服务</a>
+				<a href="/productCategories/4">服务</a>
 				<i>|</i>
 				<a href="/subjects">解决方案</a>
 			</div>
