--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -41,6 +41,7 @@
     <script src="/js/module/role.js"></script>
     <script src="/js/module/menu.js"></script>
     <script src="/js/module/password.js"></script>
+    <script src="/js/module/productDisplay.js"></script>
     <!--custom directive-->
     <script src="/js/module/uploadDirective.js"></script>
     <script src="/js/module/ckEditorDirective.js"></script>
