--- a/admin/src/main/resources/templates/product/detail.html
+++ b/admin/src/main/resources/templates/product/detail.html
@@ -30,7 +30,7 @@
 	                <div class="form-group">
 	                    <label class="control-label col-sm-2"> 型号 </label>
 	                    <div class="col-sm-6">
-	                        <input class="form-control" disabled="true" ng-value="item.model" />
+	                        <input class="form-control" disabled="true" ng-value="item.modal" />
 	                    </div>
 	                </div>
 	                <div class="form-group">
@@ -97,6 +97,9 @@
                </button>
                <button class="btn btn-defalut" type="button" ng-click="addSolution()">
                    关联主题
+               </button>
+               <button class="btn btn-defalut" type="button" ng-click="addDisplay(item.id)">
+                   展示商品
                </button>
            </div>
             </form>
