--- a/web/src/main/resources/templates/search/subject/subjects.html
+++ b/web/src/main/resources/templates/search/subject/subjects.html
@@ -11,6 +11,7 @@
 		<script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
 		<script th:src="@{/js/jquery-min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/searchForm.js}"></script>
 		<script th:src="@{/js/silderBox.js}"></script>
 		<script th:src="@{/js/script.js}"></script>
 		<script type="text/javascript">
