--- a/admin/src/main/resources/templates/advertisement/createAdvertise.html
+++ b/admin/src/main/resources/templates/advertisement/createAdvertise.html
@@ -1,4 +1,7 @@
 <div class="contentpanel files_tab">
+	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="closeModal()">
+            <span aria-hidden="true">&times;</span>
+        </button>
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
     <form class="form-horizontal w400" name="advForm" ng-submit="submit()">
         <div class="row">
