--- a/admin/src/main/resources/templates/category/edit.html
+++ b/admin/src/main/resources/templates/category/edit.html
@@ -1,4 +1,7 @@
 <div class="modal-dialog files_tab" role="document">
+	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="closeModal()">
+            <span aria-hidden="true">&times;</span>
+        </button>
 	<div class="modal-content">
 		<div class="modal-body">
 			<form class="form-horizontal" name="categoryForm">
