--- a/admin/src/main/resources/templates/productDisplay/detail.html
+++ b/admin/src/main/resources/templates/productDisplay/detail.html
@@ -1,4 +1,7 @@
-        <div class="modal-body">
+        <div class="modal-body" >
+        	<button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="closeModal()">
+            <span aria-hidden="true">&times;</span>
+        </button>
             <div class="row form-horizontal">
             	<div class="col-sm-6">
             		<div class="form-group">
