--- a/admin/src/main/resources/templates/subject/solution/create.html
+++ b/admin/src/main/resources/templates/subject/solution/create.html
@@ -1,6 +1,6 @@
 <div class="modal-dialog" role="document">
     <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="closeModal()">
             <span aria-hidden="true">&times;</span>
         </button>
         <div class="modal-body mt20">
