--- a/admin/src/main/resources/templates/user/userDetail.html
+++ b/admin/src/main/resources/templates/user/userDetail.html
@@ -1,5 +1,8 @@
 
 <div class="modal-body pl100">
+	  <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="closeModal()">
+            <span aria-hidden="true">&times;</span>
+        </button>
       <alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="1000" close="closeAlert($index)">{{alert.msg}}</alert>
       <form class="form-horizontal w400">
           <div class="row">
